# axiom-forge

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml
docs/: MATHSCAPE_HANDOFF.md
src/: emit.rs  lib.rs  primitive_growth.rs  proposal.rs  vector.rs  verify.rs
